Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/funcInterfaces/LambdaTest1_neg1.out
LambdaTest1_neg1.java:13:60: compiler.err.not.stmt
LambdaTest1_neg1.java:13:65: compiler.err.expected: ';'
2 errors
